fixing scroll bars and spacing

--- a/src/components/CompetitionsPage/CompetitionsPage.css
+++ b/src/components/CompetitionsPage/CompetitionsPage.css
@@ -23,25 +23,29 @@
     background-color: #1F262E;
     display: grid;
     gap: 10px;
-    margin-top: 20px;
+    margin-top: 10px;
     width: 40%;
     max-height: 600px;
-    overflow-y: scroll;
-
+    overflow-y: auto;
+    /* scroll-padding: 20px; */
+    scroll-margin-left: 20px;
   }
 
   .competition-details {
     width: 40%;
     color: #FFFFFF;
-    overflow-y: scroll;
+    margin: 10px;
+    overflow-y: auto;
     max-height: 600px;
-
+    padding-left:5px;
+    padding-right:5px;
   }
 
   .competition-card {
     font-size: 16px;
     text-align: left;
     padding: 20px;
+    margin-right: 5px;
     background-color: #2A313B;
     border-radius: 8px;
     color: #FFFFFF;
@@ -74,8 +78,13 @@
     width: 100%;
   }
 
+  th{
+    color: #FFFFFF;
+    text-align: left;
+    width: 1%
+  }
+
   td{
-    /* width: 1%; */
     color: #FFFFFF;
     text-align: center;
   }
@@ -113,4 +122,23 @@
     margin-top: 15px;
   }
 
+  /* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #2A313B;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #4D5B6B;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #637589;
+}
   
